database improved
